--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <style>
-            body {
-              font-family:determination_mono;
-              color:white;
-              background-color:black;
-              }
+      @font-face {
+        font-family: 'determination_mono';
+        src: url('determinationmonowebregular-z5oq-webfont.ttf') format('truetype'),
+        url('determinationmonowebregular-z5oq-webfont.woff') format('woff'),
+        url('determinationmonowebregular-z5oq-webfont.woff2') format('woff2');
+        font-weight: normal;
+        font-style: normal;
+        
+       body {
+        font-family:determination_mono;
+        color:white;
+        background-color:black;
+      }
     </style>
    <title> cool stuff </title>
   </head>
   <body>
-  <h1>
-  mmmmm
-  </h1>
-  <p>
-  cool heading
-  </p>
+    <h1>
+      Hi
+    </h1>
+    <p>
+      wassup
+    </p>
   </body>
 </html>
