--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="stylesheet.css"></script>
     <style>
-      @font-face {
-        font-family: 'determination_mono';
-        src: url('determinationmonowebregular-z5oq-webfont.ttf') format('truetype'),
-        url('determinationmonowebregular-z5oq-webfont.woff') format('woff'),
-        url('determinationmonowebregular-z5oq-webfont.woff2') format('woff2');
-        font-weight: normal;
-        font-style: normal;
-        
        body {
         font-family:determination_mono;
         color:white;
