--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="stylesheet.css"></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
        body {
         font-family:determination_mono;
